<resources>
    <string name="app_name">夜伴</string>
    <string name="welcome_message">欢迎使用夜伴，您的失眠陪伴专家</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="email">邮箱</string>
    <string name="forgot_password">忘记密码？</string>
    <string name="home">首页</string>
    <string name="chat">聊天</string>
    <string name="profile">我的</string>
    <string name="settings">设置</string>
    <string name="logout">退出登录</string>
    <string name="type_message">输入消息...</string>
    <string name="send">发送</string>
    <string name="online">在线</string>
    <string name="offline">离线</string>
    <string name="sleep_tips">睡眠小贴士</string>
    <string name="sleep_stories">睡前故事</string>
    <string name="sleep_music">助眠音乐</string>
    <string name="sleep_statistics">睡眠统计</string>
    <string name="night_mode">夜间模式</string>
    <string name="notification">通知</string>
    <string name="about">关于我们</string>
    <string name="privacy_policy">隐私政策</string>
    <string name="terms_of_service">服务条款</string>
    <string name="version">版本</string>
</resources>